c/src/test/resources/c/mini_bnc/valid/multiMalloc.ctrl
<controlFile>
  <sourceFile name="multiMalloc.c" id="1" />
  <run>
    <startPosition fileId="1" line="9" />
    <endPosition fileId="1" line="15" />
  </run>
</controlFile>