c/src/test/resources/c/mini_bnc/invalid/ex43NonLoop.ctrl
<controlFile>
    <sourceFile name="ex43NonLoop.c" id="1" />
    <run>
        <startPosition fileId="1" line="15" />
        <endPosition fileId="1" line="37" />
    </run>
</controlFile>